cargo-clash-source/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cargo-clash
  labels:
    name: cargo-clash
    app: cargo-clash
